--- a/issue03/index/index.html
+++ b/issue03/index/index.html
@@ -6,11 +6,11 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0"/>
-<title>Magazine | A Word From The Editor</title>
+<title>News | Summer Bible Conference at Ashburnham, 2013</title>
 
 <link rel="shortcut icon" type="image/png" href="/p2/favicon.png" />
 <link href="/p2/stylesheets/screen.css" rel="stylesheet" type="text/css" media="all"/>
-<link rel="alternate" type="application/rss+xml" title="P2 Magazine" href="http://thoughtworks.github.io/p2/atom.xml"/>
+<link rel="alternate" type="application/rss+xml" title="P2 Magazine" href="http://http://andrewchaa.github.io/p2/atom.xml"/>
 <script src="http://modernizr.com/downloads/modernizr-2.5.3.js"></script>
 <script src="/p2/assets/js/keymaster.min.js"></script>
 </head>
@@ -88,15 +88,6 @@
 if (typeof jQuery == 'undefined') {
     document.write(unescape("%3Cscript src='assets/js/jquery-1.8.2.min.js' type='text/javascript'%3E%3C/script%3E"));
 }
-</script>
-<script>
-(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-ga('create', 'UA-41328116-1', 'thoughtworks.github.io');
-ga('send', 'pageview');
 </script>
 <script>
 $(function() {
