--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html>
 <head>
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-<meta http-equiv="refresh" content="0;url=/p2/issue03/index" />
+<meta http-equiv="refresh" content="0;url=/news/issue03/index" />
 </head>
 </html>
