--- a/2013-summer-conference/index/index.html
+++ b/2013-summer-conference/index/index.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html lang="en">
 
@@ -30,7 +29,7 @@
 <div class="container">
     <section class="table-of-contents">
     <header class="cover">
-        <img src="/news/images/ashburnham-place.jpg" style="width:100%; height: 100%"/>
+        <img src="/news/images/ashburnham-place.jpg" />
     </header>
     <div class="logo">
         <h1 id="title">Summer</h1>
