--- a/2013-summer-conference/index/index.html
+++ b/2013-summer-conference/index/index.html
@@ -29,16 +29,16 @@
 <div class="container">
     <section class="table-of-contents">
     <header class="cover">
-        <img src="/news/images/ashburnham-place.jpg" />
+        <img src="/news/images/ashburnham-place.jpg" style="width: 100%" />
     </header>
     <div class="logo">
-        <h1 id="title">Summer</h1>
-        <h4 id="subtitle">Bible Conference</h4>
-        <h4 id="corp"><strong>London</strong> UBF</h4>
+        <h1 id="title">2013</h1>
+        <h4 id="subtitle">Summer</h4>
+        <h4 id="corp">Bible Conference</h4>
     </div>
     <nav class="issues">
         <ul class="clearfix">
-            <li class="active"><a href="/news/2013-summer-conference/index/">Summer 2013</a>
+            <li class="active"><a href="/news/2013-summer-conference/index/">2013 Summer Bible Conference by London UBF</a>
             <li id="start-reading" class="pull-right"><a href="/news/2013-summer-conference/localisation-africa/">Start Reading &raquo;</a></li>
         </ul>
     </nav>
