--- a/2013-summer-conference/index/index.html
+++ b/2013-summer-conference/index/index.html
@@ -43,14 +43,8 @@
         </ul>
     </nav>
     <section class="issue-notes">
-        <h1>A Word From The Editor</h1>
-        <p>I remember working on a project where some team members were dissatisfied with the daily stand-up. They didn’t feel like they were getting any value out  of it. For the next iteration, the team held no stand-ups. During the retrospective, we talked about what information we hadn’t shared with each other that we should have. Stand-up was brought back the following iteration to share just that information.</p>
-
-<p>In the 3rd issue of P2 magazine we pause improve this and ask for feedback on whether it should come back. We talk to Musa Kurhula Baloyi about the challenges of <em>Localisation and Digitisation in Africa</em>. Nick Thorpe continues his series with John Stojanovski and John’s history with computer viruses. Ali Lemer talks to Anette Bergo about her experiences of setting up the MelbJS group. All this, more and some new features like an RSS feed and arrow keys make up the August edition of P2 Magazine.</p>
-
-<p>If you&rsquo;d like to get in touch, you can email us at: <a href="&#109;&#x61;&#105;&#x6c;&#x74;&#x6f;&#58;&#112;&#x32;&#x40;&#x74;&#x68;&#x6f;&#117;&#x67;&#x68;&#x74;&#119;&#111;&#114;&#107;&#x73;&#x2e;&#x63;&#111;&#109;">&#112;&#x32;&#64;&#x74;&#104;&#x6f;&#117;&#103;&#104;&#x74;&#x77;&#111;&#x72;&#x6b;&#x73;&#46;&#99;&#111;&#x6d;</a></p>
-
-<p>Ryan Boucher, Editor in Chief</p>
+        <h1>A Word For The Conference</h1>
+        <p>To be edited...</p>
 
     </section>
     <section class="issue-notes">
