--- a/2013-summer-conference/introduction/index.html
+++ b/2013-summer-conference/introduction/index.html
@@ -10,17 +10,17 @@
 
 <meta name="description" content="My Experiences Localising and Digitising Tswa-Ronga material">
 
-<link rel="shortcut icon" type="image/png" href="/p2/favicon.png" />
-<link href="/p2/stylesheets/screen.css" rel="stylesheet" type="text/css" media="all"/>
-<link rel="alternate" type="application/rss+xml" title="P2 Magazine" href="http://thoughtworks.github.io/p2/atom.xml"/>
+<link rel="shortcut icon" type="image/png" href="/news/favicon.png" />
+<link href="/news/stylesheets/screen.css" rel="stylesheet" type="text/css" media="all"/>
+<link rel="alternate" type="application/rss+xml" title="news Magazine" href="http://andrewchaa.github.io/news/atom.xml"/>
 <script src="http://modernizr.com/downloads/modernizr-2.5.3.js"></script>
-<script src="/p2/assets/js/keymaster.min.js"></script>
+<script src="/news/assets/js/keymaster.min.js"></script>
 </head>
 
 <body class="wrapper">
 <nav class="paginate">
   
-    <a id="prev" href="/p2/issue03/index/" class="prev">&#9664;</a>
+    <a id="prev" href="/news/2013-summer-conference/index/" class="prev">&#9664;</a>
     <script type="text/javascript">
       key('left', function() {
         window.open($("#prev")[0].href, '_self', false);
@@ -28,7 +28,7 @@
     </script>
   
   
-    <a id="next" href="/p2/issue03/velocityraptors/" class="next">&#9654;</a>
+    <a id="next" href="/news/2013-summer-conference/velocityraptors/" class="next">&#9654;</a>
     <script type="text/javascript">
       key('right', function(){
         window.open($("#next")[0].href, '_self', false);
@@ -41,7 +41,7 @@
     <section class="page">
     <nav class="issues">
     <ul class="clearfix">
-        <li class="active"><a href="/p2/issue03/index/">Issue 03, August 2013</a></li>
+        <li class="active"><a href="/news/2013-summer-conference/index/">Issue 03, August 2013</a></li>
         <li class="pull-right">Page 1 / 9 </li>
     </ul>
 </nav>
@@ -56,7 +56,7 @@
     </header>
     <div class="article-body"><p>This is a story about the day it all changed for me, and hopefully for other African and minority language speakers. It is a story about the day I had my &ldquo;stroke of genius&rdquo;. However, there was nothing particularly genius about this idea. It was all common sense, which, until this day, was not so common thanks to decades, perhaps centuries, of thinking in a particularly constrained manner.</p>
 
-<p><img src="/p2/images/localisation-africa/1.png" alt="Facebook Chat" /></p>
+<p><img src="/news/images/introduction/1.png" alt="Facebook Chat" /></p>
 
 <p>I was upset when I read the comment; No-one has the right to tell me what language to speak! But the conversation drove me to perform a quick Google search for an online Tsonga dictionary. To my surprise, no online dictionary existed! Instead I found dictionaries for almost all the other South African languages, and, if a dictionary or translator did not exist at the time, it was in the works.</p>
 
@@ -68,7 +68,7 @@
 
 <p>Often times when I get to do research, I can&rsquo;t share it with other Tsonga people because I am using the University of the Witwatersrand&rsquo;s subscription to JSTOR and Google Books keeps toying with me by getting me interested in something and then saying I cannot read the next page.</p>
 
-<p><img src="/p2/images/localisation-africa/2.png" alt="JSTOR" /></p>
+<p><img src="/news/images/introduction/2.png" alt="JSTOR" /></p>
 
 <p>So I have to post retyped paragraphs of what I find interesting, which Facebook will remove from the news feed before someone asks the same question again. Most of the people will never find out anymore than that. And that makes me very worried. History is best studied while it happens. Most people&rsquo;s phones cannot read PDF files, so even when I find something publicly available, I have to take a screenshot or transcribe it. It is a lot of work.</p>
 
@@ -82,7 +82,7 @@
 
 <p>But to have an impact, these programmers must start a movement so big that GauTrain with their electronic systems, Absa with their small ATMs, Google, News24, and a host of other companies practising digital discrimination will no longer ignore the fact that Africans don&rsquo;t just speak isiZulu and Kiswahili. There are languages like Tsonga, Gironga, Sheetswha, Txicopi, Bitonga, Cindau and thousands of others.</p>
 
-<p><img src="/p2/images/localisation-africa/3.png" alt="Chrome translate" /></p>
+<p><img src="/news/images/introduction/3.png" alt="Chrome translate" /></p>
 
 <p>Other than my project Madyondza, there are attempts at digitising regional content such as Xitsonga Online, Tsonga Online, Tsonga History Discourse, Nthavela, Matimu News, and Ray Chauke&rsquo;s YouTube channel, to name a few. It is not a big feat, but it&rsquo;s a foot in the door.</p>
 
@@ -95,7 +95,7 @@
       
       <div>
          <a href="#">
-            <img class="author-avatar" src="/p2/images/musa-avatar.jpg"/>
+            <img class="author-avatar" src="/news/images/musa-avatar.jpg"/>
          </a>
          <div>Musa Kurhula Baloyi</div>
          
@@ -114,7 +114,7 @@
 <div id="bottom-pages">
     <nav class="paginate">
   
-    <a id="prev" href="/p2/issue03/index/" class="prev">&#9664;</a>
+    <a id="prev" href="/news/2013-summer-conference/index/" class="prev">&#9664;</a>
     <script type="text/javascript">
       key('left', function() {
         window.open($("#prev")[0].href, '_self', false);
@@ -122,7 +122,7 @@
     </script>
   
   
-    <a id="next" href="/p2/issue03/velocityraptors/" class="next">&#9654;</a>
+    <a id="next" href="/news/2013-summer-conference/velocityraptors/" class="next">&#9654;</a>
     <script type="text/javascript">
       key('right', function(){
         window.open($("#next")[0].href, '_self', false);
